# C-plus-plus-Practice

./: .gitignore  CMakeLists.txt
include/: Soldier.h  printoperations.h
soldiers/: main  main.cpp
soldiers/printoperations/: printoperations.h
soldiers/soldierHeaders/: soldier.cpp
src/: Soldier.cpp  main.cpp  printoperations.cpp
